-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.9.5, 5.10.1
-
Windows
-
I30633380b75acd14f1a1df87985c99540168a9f1
With QtWebenine if QPrinter is created with QPrinter::HighResolution this freezes the application for some time. Other than HighResolution it works good.
This can be easily reproduced with Qt's Demo browser example with one line change
void BrowserMainWindow::printRequested(QWebEnginePage *page) { if (m_currentPrinter) return; - m_currentPrinter = new QPrinter(); + m_currentPrinter = new QPrinter(QPrinter::HighResolution); QScopedPointer<QPrintDialog> dialog(new QPrintDialog(m_currentPrinter, this)); dialog->setWindowTitle(tr("Print Document")); if (dialog->exec() != QDialog::Accepted) { slotHandlePagePrinted(false); return; } page->print(m_currentPrinter, invoke(this, &BrowserMainWindow::slotHandlePagePrinted)); }
For Gerrit Dashboard: QTBUG-68561 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
237428,13 | Move printing operation to a new thread | dev | qt/qtwebengine | Status: MERGED | -2 | 0 |
248613,3 | Docs: Correct documentation of QWebEnginePage::print() | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |